<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.niu.cs.z1759385.quadraticcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelA"
        android:id="@+id/textViewA"
        android:layout_alignBottom="@+id/editTextA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextA"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignLeft="@+id/editTextB"
        android:layout_alignStart="@+id/editTextB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelB"
        android:id="@+id/textViewB"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textViewA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextB"
        android:layout_alignBottom="@+id/textViewB"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelc"
        android:id="@+id/textViewC"
        android:layout_below="@+id/editTextB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextC"
        android:layout_alignBottom="@+id/textViewC"
        android:layout_alignLeft="@+id/editTextB"
        android:layout_alignStart="@+id/editTextB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelx1"
        android:id="@+id/textViewX1"
        android:layout_below="@+id/textViewC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/x1TextView"
        android:hint="value of x1"
        android:layout_alignTop="@+id/textViewX1"
        android:layout_alignLeft="@+id/editTextC"
        android:layout_alignStart="@+id/editTextC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelx2"
        android:id="@+id/textViewX2"
        android:layout_alignTop="@+id/x2TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/x2TextView"
        android:hint="value of x2"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/x1TextView"
        android:layout_alignLeft="@+id/x1TextView"
        android:layout_alignStart="@+id/x1TextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelGo"
        android:id="@+id/btngo"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/textViewX2"
        android:layout_toRightOf="@+id/textViewB"
        android:layout_toEndOf="@+id/textViewB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelclear"
        android:id="@+id/btnclear"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_alignTop="@+id/btngo"
        android:layout_toRightOf="@+id/x2TextView"
        android:layout_toEndOf="@+id/x2TextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelTitle"
        android:id="@+id/textViewTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
